# E4-Algo_geo

./: .gitignore  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
lib/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/glew/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
lib/glfw/: CMakeCache.txt  Makefile  cmake_install.cmake  cmake_uninstall.cmake
lib/glfw/docs/: Doxyfile  Makefile  cmake_install.cmake
lib/glfw/docs/html/: classes.html  compile.html  context.html  dir_7d046523570a4bf058ddf3b10b545b6c.html  dir_d44c64559bbebec7f509842c48db8b23.html  functions.html  functions_vars.html  glfw3_8h.html  glfw3_8h_source.html  glfw3native_8h.html  glfw3native_8h_source.html  globals.html  globals_c.html  globals_defs_f.html  globals_defs_g.html  globals_defs_i.html  globals_defs_j.html  globals_defs_l.html  globals_defs_n.html  globals_defs_o.html  globals_defs_p.html  globals_defs_s.html  globals_func.html  globals_g.html  globals_h.html  globals_l.html  globals_m.html  globals_r.html  globals_s.html  globals_t.html  globals_type.html  group__init.html  (+22 more)
lib/glfw/examples/: Makefile  boing  cmake_install.cmake  gears  heightmap  particles  simple  splitview  wave
lib/glfw/src/: Makefile  cmake_install.cmake
lib/glfw/tests/: Makefile  clipboard  cmake_install.cmake  cursor  empty  events  gamma  glfwinfo  iconify  joysticks  monitors  msaa  reopen  sharing  tearing  threads  title  windows
lib/nfd/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake
shaders/: light.frag.glsl  light.vert.glsl
src/: .#helperFunctions.h  .#myPoint3D.h  GlobalVar.hpp  Globalvar.cpp  dem.m  dem.txt  helperFunctions.cpp  helperFunctions.h  helperFunctions.hpp  main.cpp  matrix.cpp  matrix.hpp  myFace.cpp  myFace.hpp  myHalfedge.cpp  myHalfedge.h  myHalfedge.hpp  myMesh.cpp  myMesh.h  myMesh.hpp  myPoint3D.cpp  myPoint3D.h  myPoint3D.hpp  myVector3D.cpp  myVector3D.h  myVector3D.hpp  myVertex.cpp  myVertex.h  myVertex.hpp
srctest/: main.cpp
(+6 files in other folders)
